Actions
Bug #13136
closedlibc: memset_s() error: unchecked function return
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
smatch error:
/code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../port/gen/memset_s.c:66 memset_s() error: unchecked function return '(*__memset_vp)'
Updated by Joshua M. Clulow over 1 year ago
Updated by Electric Monk over 1 year ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 8c5b3a5a518f93629928bd6ed373422602ce74a9
commit 8c5b3a5a518f93629928bd6ed373422602ce74a9 Author: Toomas Soome <tsoome@me.com> Date: 2020-09-17T08:10:48.000Z 13136 libc: memset_s() error: unchecked function return Reviewed by: Marco van Wieringen <mvw@planets.elm.net> Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Joshua M. Clulow <josh@sysmgr.org>
Actions