13136 libc: memset_s() error: unchecked function return Reviewed by: Marco van Wieringen <mvw@planets.elm.net> Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Joshua M. Clulow <josh@sysmgr.org>